# fastapi-want-app

./: .dockerignore  .gitignore  Dockerfile  README.md  api_docs.json  docker-compose.yml  docker.sh  entrypoint.sh  init.sql  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 8078a768ef82_first.py
app/: config.py  crud.py  databases.py  main.py  models.py  pyvenv.cfg  schemas.py
app/routers/: companies.py  tags.py
app/tests/: conftest.py  test_crud.py  test_main.py  test_migrations.py
app/tests/routers/: test_companies.py  test_tags.py
