[project]
name = "wanted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi-pagination>=0.12.34",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-postgresql>=7.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
]
